# NavigationalRobot

./: README.md
ethical_robot_ws/install/: local_setup.sh  setup.sh
ethical_robot_ws/install/ethical_robot_sim/lib/ethical_robot_sim/: auto_decision_maker  decision_engine  extended_robot_controller  fast_robot_controller  perception_node  robot_controller  secondary_decision_publisher
ethical_robot_ws/install/ethical_robot_sim/share/ethical_robot_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ethical_robot_ws/src/ethical_robot_sim/: package.xml  setup.cfg  setup.py
ethical_robot_ws/src/ethical_robot_sim/config/: ethical_params.yaml  nav.rviz  navigation_params.yaml
ethical_robot_ws/src/ethical_robot_sim/ethical_robot_sim/: debug_controller.py  decision_engine.py  extended_robot_controller.py  faster_robot_controller.py  robot_controller.py  robot_controller.py.bak  test_ethical_frameworks.py
ethical_robot_ws/src/ethical_robot_sim/launch/: fixed_simulation.launch.py  improved_simulation.launch.py  simulation.launch.py
ethical_robot_ws/src/ethical_robot_sim/models/ethical_robot/: model.sdfZone.Identifier
ethical_robot_ws/src/ethical_robot_sim/urdf/: ethical_robot.urdf.xacro
ethical_robot_ws/src/ethical_robot_sim/worlds/: dilemma_world.sdf  fixed_dilemma_world.sdf  improved_dilemma_world.sdf
